// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange allows value prop to accept empty strings 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange input props can be applied to min and max inputs 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="1"
        name="name-minValue"
        step="1"
        style="inline-size:3.6em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:0%;inline-size:77.77777777777779%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="10"
        min="1"
        name="name-maxValue"
        step="1"
        style="inline-size:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2 emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-compressed-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasTicks"
  >
    <div
      class="euiRangeTicks emotion-euiRangeTicks-regular-isCustom"
    >
      <button
        class="euiRangeTick emotion-euiRangeTick-isCustom-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px)"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-isCustom-isMax-regular"
        style="inset-inline-end:0%;margin-inline-end:-1.25em"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        <span
          aria-hidden="true"
          class="euiRangeTick__pseudo emotion-euiRangeTick__pseudo"
          style="margin-inline-end:calc(1.25em + 4px)"
        />
        100kb
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasTicks-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight-hasTicks"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:20%;inline-size:80%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-disabled"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-fullWidth-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props inputs should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2 emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="name-minValue"
        step="1"
        style="inline-size:4.4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="name-maxValue"
        step="1"
        style="inline-size:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props isDraggable should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-max"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasLevels"
  >
    <div
      class="euiRangeLevels emotion-euiRangeLevels-hasRange"
    >
      <span
        class="euiRangeLevel emotion-euiRangeLevel-danger"
        style="inset-inline-start:calc(0% + 0px);inset-inline-end:calc(100% - 0px)"
      />
      <span
        class="euiRangeLevel emotion-euiRangeLevel-success"
        style="inset-inline-start:calc(0% + 0px);inset-inline-end:calc(100% - 0px)"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="emotion-euiRangeHighlight__levelsWrapper"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      >
        <div
          class="emotion-euiRangeLevels-euiRangeHighlight__levels"
          style="inset-inline-start:-0px;inline-size:0px"
        >
          <span
            class="euiRangeLevel emotion-euiRangeLevel-danger"
            style="inset-inline-start:calc(0% + 0px);inset-inline-end:calc(100% - 0px)"
          />
          <span
            class="euiRangeLevel emotion-euiRangeLevel-success"
            style="inset-inline-start:calc(0% + 0px);inset-inline-end:calc(100% - 0px)"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props loading should display when showInput="inputWithPopover" 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
          >
            →
          </div>
          <input
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              aria-label="Loading"
              class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
              role="progressbar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiInputPopover euiRange__popover emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
          >
            →
          </div>
          <input
            class="euiFieldNumber euiFormControlLayoutDelimited__input emotion-euiRangeInput"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasTicks"
  >
    <div
      class="euiRangeTicks emotion-euiRangeTicks-regular"
    >
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(NaN% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiRangeTick emotion-euiRangeTick-hasPseudoTickMark-regular"
        style="inset-inline-start:calc(-Infinity% + 8px);max-inline-size:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasTicks-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight-hasTicks"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start:1%;inline-size:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;
